--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>webapss</title>
-</head>
-<body>
-  <h1>SRKR</h1>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>webapps</title>
+  </head>
+  <body><center>
+    <h1>SRKR</h1>
+    <h2>HEMA</h2>
+  </body>
 </html>
