--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>webapps</title>
+    <title>Resume</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <body><center>
-    <h1>SRKR</h1>
-    <h2>HEMA</h2>
+  <body>
+    <div class="parent">
+      <div class="childone" >
+        <img src="th.jpg" alt="th.jpg" >
+        <h3>Hema</h3>
+        <a href="mailto:hemaparvathaneni@gmail.com">hema</a>
+        <h3>+91-9979864531</h3>
+        <h1>address</h1>
+        <hr>
+        <p>SRKR college</p>
+        <p>bhimavaram</p>
+      </div>
+      <div class="childtwo">
+        <h3>Career objectives</h3>
+        <hr>
+      </div>
+    </div>
   </body>
 </html>
