--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
     .flex{
       display:flex;
       flex-direction: row;
-      justify-content: space-around
+      justify-content: space-around;
       flex-wrap: wrap;
     }
     .flex>div{
@@ -18,7 +18,7 @@ padding:5%;
 font-size: 50px;
 
     }
-    
+
     </style>
   </head>
   <body>
