--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
     <meta charset="utf-8">
     <title>Resume</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width", initial-scale=1.0>
   </head>
+
   <body>
     <div class="parent">
       <div class="childone" >
-        <img src="th.jpg" alt="th.jpg" >
+<!--<img src="th.jpg" alt="th.jpg" >
         <h3>Hema</h3>
-        <a href="mailto:hemaparvathaneni@gmail.com">hema</a>
+        <a href="mailto:hemaparvathaneni@gmail.com">hemaparvathaneni@gmail.com</a>
         <h3>+91-9979864531</h3>
-        <h1>address</h1>
+        <h3>address</h3>
         <hr>
         <p>SRKR college</p>
-        <p>bhimavaram</p>
+        <p>bhimavaram</p> -->
       </div>
       <div class="childtwo">
-        <h3>Career objectives</h3>
-        <hr>
+      <!--  <h3>Career objectives</h3>
+        <hr>-->
       </div>
     </div>
+    <script type="text/javascript" src="main.js">
+
+    </script>
   </body>
 </html>
